test/apps/errors/__sapper__/dev/client/enhance-your-calm.b90add74.js
import { c as SvelteComponentDev, d as init, b as safe_not_equal, a as noop } from './chunk.035fae03.js';

/* src/routes/enhance-your-calm.svelte generated by Svelte v3.2.2 */

function create_fragment(ctx) {
	return {
		c: noop,
		l: noop,
		m: noop,
		p: noop,
		i: noop,
		o: noop,
		d: noop
	};
}

function preload() {
	this.error(420, 'Enhance your calm');
}

class Enhance_your_calm extends SvelteComponentDev {
	constructor(options) {
		super(options);
		init(this, options, null, create_fragment, safe_not_equal, []);
	}
}

export default Enhance_your_calm;
export { preload };
